[project]
name = "akinator-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "akinator>=2.0.2",
    "cloudscraper>=1.2.71",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]
